--- a/src/TicketManagement.MVC/Views/ThirdPartyEvents/Preview.cshtml
+++ b/src/TicketManagement.MVC/Views/ThirdPartyEvents/Preview.cshtml
@@ -1,12 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using TicketManagement.Common.DI
-@using TicketManagement.Common.Entities
 @using TicketManagement.MVC.Helpers
+@using ThirdPartyEventEditor.Models
 
 @inject IViewLocalizer Localizer
-@inject IEventService EventService
 
-@model IEnumerable<Event>
+@model IEnumerable<ThirdPartyEvent>
 
 @{
     var isManageRole = User.IsInRole("Administrator") || User.IsInRole("EventManager");
@@ -22,25 +20,29 @@
 <div class="container">
     <div class="row">
         @{
-            foreach (var evnt in Model)
+            foreach (var thirdPartyEvent in Model)
             {
                 <div class="col">
                     <form asp-controller="ThirdPartyEvents" asp-action="Insert" method="post" class="form-horizontal" role="form">
                         <div class="img__container visible">
-                            <input name="evntLogoImage" value="@evnt.EventLogoImage" hidden />
-                            <img class="image shadow-lg" alt="" src="@Url.Content(evnt.EventLogoImage)" />
+                            <input name="thirdPartyEventLogoImage" value="@thirdPartyEvent.EventLogoImage" hidden />
+                            <img class="image shadow-lg" alt="" src="@Url.Content(thirdPartyEvent.EventLogoImage)" />
                             <div class="img__description">
                                 <div class="text">
-                                    <input name="evntTime" value="@evnt.EventTime" hidden />
-                                    <input name="evntEndTime" value="@evnt.EventEndTime" hidden />
-                                    <div class="img__header right" style="font-size: 0.75em;">@Html.ModifyDateTime(evnt.EventTime)</div>
-                                    <input name="evntName" value="@evnt.Name" hidden />
-                                    <div class="img__header left"><h2 style="text-decoration: none;">@evnt.Name</h2></div>
+                                    <input name="thirdPartyEventTime" value="@thirdPartyEvent.EventTime" hidden />
+                                    <input name="thirdPartyEventEndTime" value="@thirdPartyEvent.EventEndTime" hidden />
+                                    <div class="img__header right" style="font-size: 0.75em;">@Html.ModifyDateTime(thirdPartyEvent.EventTime)</div>
+                                    <input name="thirdPartyEventName" value="@thirdPartyEvent.Name" hidden />
+                                    <div class="img__header left"><h2 style="text-decoration: none;">@thirdPartyEvent.Name</h2></div>
                                 </div>
                                 <div class="text">
+                                    <div class="left">
+                                        <input name="thirdPartyEventPrice" value="@thirdPartyEvent.Price" hidden />
+                                        <p>@Html.DisplayFor(model => thirdPartyEvent.Price)</p>
+                                    </div>
                                     <div class="right">
-                                        <input name="evntLayoutId" value="@evnt.LayoutId" hidden />
-                                        <p>@evnt.LayoutId</p>
+                                        <input name="thirdPartyEventLayoutId" value="@thirdPartyEvent.LayoutId" hidden />
+                                        <p>@thirdPartyEvent.LayoutId</p>
                                     </div>
                                 </div>
                                 <div class="text">
@@ -51,12 +53,12 @@
                             </div>
                         </div>
                         <div class="text">
-                            <input name="evntDescription" value="@evnt.Description" hidden />
-                            <p>@evnt.Description</p>
+                            <input name="thirdPartyEventDescription" value="@thirdPartyEvent.Description" hidden />
+                            <p>@thirdPartyEvent.Description</p>
                         </div>
                         <input class="btn btn-sm btn-primary" type="submit" value="@Localizer["Add"]" />
                     </form>
-                    <form asp-controller="ThirdPartyEvents" asp-action="Delete" asp-route-evntName="@evnt.Name" asp-route-evntTime="@evnt.EventTime" asp-route-evntDescription="@evnt.Description" method="post">
+                    <form asp-controller="ThirdPartyEvents" asp-action="Delete" asp-route-thirdPartyEventName="@thirdPartyEvent.Name" asp-route-thirdPartyEventTime="@thirdPartyEvent.EventTime" asp-route-thirdPartyEventDescription="@thirdPartyEvent.Description" method="post">
                         <button type="submit" class="btn btn-sm btn-danger" onclick="@Html.Raw("return confirm('")@Localizer["Are you sure you want to delete this ThirdPartyEvent?"]@Html.Raw("')")">@Localizer["Delete"]</button>
                     </form>
                 </div>
