--- a/src/ThirdPartyEventEditor/ThirdPartyEventEditor/Views/ThirdPartyEvents/Index.cshtml
+++ b/src/ThirdPartyEventEditor/ThirdPartyEventEditor/Views/ThirdPartyEvents/Index.cshtml
@@ -10,6 +10,8 @@
 }
 
 @section scripts {
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     <script>
         function clickAdd() {
             document.querySelectorAll('.thirdPartyEventAddDiv').forEach(el => el.removeAttribute('hidden'));
@@ -57,6 +59,7 @@
     <tr>
         @using (Html.BeginForm("Insert", "ThirdPartyEvents", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
+            @Html.ValidationSummary(true)
             @Html.AntiForgeryToken()
             <td>
                 <div class="thirdPartyEventAddDiv" hidden>
