Fixed issue #8 Added global handling and logging exception

--- a/src/ThirdPartyEventEditor/ThirdPartyEventEditor/Views/Shared/_Layout.cshtml
+++ b/src/ThirdPartyEventEditor/ThirdPartyEventEditor/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Third Party Events Editor", "Index", "ThirdPartyEvents", new { area = "" }, new { @class = "navbar-brand" })
             </div>
         </div>
     </div>
@@ -24,7 +24,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Third Party Events Editor</p>
         </footer>
     </div>
 
