Removed MVC proj, partional implementation identity into UserAPI proj, refactoring WebUI proj

--- a/src/TicketManagement.WebUI/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/src/TicketManagement.WebUI/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,3 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using TicketManagement.WebUI.Areas.Identity
+﻿@using TicketManagement.WebUI.Areas.Identity
 @using TicketManagement.WebUI.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
