--- a/src/TicketManagement.WebUI/Views/UsersManagement/ChangeRole.cshtml
+++ b/src/TicketManagement.WebUI/Views/UsersManagement/ChangeRole.cshtml
@@ -1,6 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.Mvc.Localization
-@using TicketManagement.Common.Identity
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using UserApiClientGenerated
 
 @model ChangeRole
 @inject IViewLocalizer Localizer
