--- a/src/TicketManagement.WebUI/Views/Event/Index.cshtml
+++ b/src/TicketManagement.WebUI/Views/Event/Index.cshtml
@@ -1,10 +1,8 @@
-﻿@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using Microsoft.AspNetCore.Mvc.Localization
 @using TicketManagement.Common.DI
 @using TicketManagement.Common.Entities
 @using TicketManagement.WebUI.Helpers
 
-@inject IAuthorizationService AuthorizationService
 @inject IServiceProvider ServiceProvider
 @inject IViewLocalizer Localizer
 
