--- a/src/TicketManagement.WebUI/Views/Home/NoBalance.cshtml
+++ b/src/TicketManagement.WebUI/Views/Home/NoBalance.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using TicketManagement.Common.Identity
+@using UserApiClientGenerated
 
 @model User
 @inject IViewLocalizer Localizer
