--- a/src/TicketManagement.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/TicketManagement.WebUI/Views/Shared/_Layout.cshtml
@@ -1,9 +1,7 @@
-﻿@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Localization
+﻿@using Microsoft.AspNetCore.Localization
 @using Microsoft.AspNetCore.Mvc.Localization
 @using TicketManagement.Common.DI;
 
-@inject IAuthorizationService AuthorizationService
 @inject IViewLocalizer Localizer
 
 @{
