--- a/src/TicketManagement.WebUI/Views/Shared/_LoginPartial.cshtml
+++ b/src/TicketManagement.WebUI/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,9 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.Mvc.Localization
-@using TicketManagement.Common.Identity
+﻿@using Microsoft.AspNetCore.Mvc.Localization
 
-@inject SignInManager<User> SignInManager
 @inject IViewLocalizer Localizer
 
 <ul class="navbar-nav">
-    @if (User is not null && SignInManager.IsSignedIn(User))
+    @if (User is not null && User.Identity.IsAuthenticated)
     {
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="@Localizer["Manage personal profile"]">@Localizer["Hello"] @User.Identity?.Name!</a>
