--- a/src/TicketManagement.WebUI/Views/UsersManagement/Edit.cshtml
+++ b/src/TicketManagement.WebUI/Views/UsersManagement/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using TicketManagement.Common.Identity
+@using UserApiClientGenerated
 
 @model CreateUser
 @inject IViewLocalizer Localizer
