--- a/src/TicketManagement.WebUI/Views/Home/Index.cshtml
+++ b/src/TicketManagement.WebUI/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 @using TicketManagement.WebUI.Helpers
 
 @inject IViewLocalizer Localizer
-@inject IEventService EventService
+@inject EventManagementApiClient EventManagementApiClient
 
 @model ICollection<Event>
 
@@ -15,7 +15,7 @@
 @if (isManageRole)
 {
     <div class="text-sm-center">
-        <h5 class="display-4">@Localizer["Total Events:"] @((await EventService.GetAllAsync()).Count())</h5>
+        <h5 class="display-4">@Localizer["Total Events:"] @((await EventManagementApiClient.GetAllEventsAsync()).Count())</h5>
     </div>
 }
 
@@ -39,7 +39,7 @@
                                             <p>@string.Concat(@evnt.Description.Substring(0, Math.Min(evnt.Description.Length, 45)), "...")</p>
                                         </div>
                                         <div class="right">
-                                            <p>@(await EventService.GetSeatsAvailableCountAsync(evnt.Id)) / @(await EventService.GetSeatsCountAsync(evnt.LayoutId))</p>
+                                            <p>@(await EventManagementApiClient.GetSeatsAvailableCountAsync(evnt.Id)) / @(await EventManagementApiClient.GetSeatsCountAsync(evnt.LayoutId))</p>
                                         </div>
                                     </div>
                                     <div class="text">
@@ -55,7 +55,7 @@
                     {
                         <form asp-action="Delete" asp-controller="EventsManagement" asp-route-eventId="@evnt.Id" method="post">
                             <a class="btn btn-sm btn-primary" asp-action="Edit" asp-controller="EventsManagement" asp-route-eventId="@evnt.Id">@Localizer["Edit"]</a>
-                            @if (await EventService.IsAllAvailableSeatsAsync(evnt.Id))
+                            @if (await EventManagementApiClient.IsAllAvailableSeatsAsync(evnt.Id))
                             {
                                 <button type="submit" class="btn btn-sm btn-danger" onclick="@Html.Raw("return confirm('")@Localizer["Are you sure you want to delete this event?"]@Html.Raw("')")">@Localizer["Delete"]</button>
                             }
