--- a/src/TicketManagement.WebUI/Views/AreasManagement/Index.cshtml
+++ b/src/TicketManagement.WebUI/Views/AreasManagement/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using EventManagementApiClientGenerated
+@using Microsoft.AspNetCore.Mvc.Localization
 @using TicketManagement.Common.DI
-@using TicketManagement.Common.Entities
 
 @model IEnumerable<Area>
 @inject IViewLocalizer Localizer
-@inject ILayoutService LayoutService
+@inject LayoutManagementApiClient LayoutManagementApiClient
 
 @{
-    var selectListLayoutsId = (await LayoutService.GetAllAsync())
+    var selectListLayoutsId = (await LayoutManagementApiClient.GetAllLayoutsAsync())
         ?.Select(c => new SelectListItem { Value = c.Id.ToString(), Text = c.Name });
 }
 
