--- a/src/TicketManagement.WebUI/Views/VenuesManagement/Index.cshtml
+++ b/src/TicketManagement.WebUI/Views/VenuesManagement/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using TicketManagement.Common.Entities
+﻿@using EventManagementApiClientGenerated
+@using Microsoft.AspNetCore.Mvc.Localization
 
 @model IEnumerable<Venue>
 @inject IViewLocalizer Localizer
