--- a/src/TicketManagement.WebUI/Views/Event/Index.cshtml
+++ b/src/TicketManagement.WebUI/Views/Event/Index.cshtml
@@ -1,10 +1,7 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using TicketManagement.Common.DI
-@using TicketManagement.Common.Entities
+﻿@using EventManagementApiClientGenerated
+@using Microsoft.AspNetCore.Mvc.Localization
 @using TicketManagement.WebUI.Helpers
-@using EventManagementApiClientGenerated
 
-@inject IServiceProvider ServiceProvider
 @inject IViewLocalizer Localizer
 @inject EventManagementApiClient EventManagementApiClient
 
