--- a/src/TicketManagement.WebUI/Views/EventsManagement/SelectVenues.cshtml
+++ b/src/TicketManagement.WebUI/Views/EventsManagement/SelectVenues.cshtml
@@ -1,6 +1,5 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using TicketManagement.Common.DI
-@using TicketManagement.Common.Entities
+﻿@using EventManagementApiClientGenerated
+@using Microsoft.AspNetCore.Mvc.Localization
 
 @model IEnumerable<Venue>
 @inject IViewLocalizer Localizer
