--- a/src/TicketManagement.ReactJS/ClientApp/src/views/NavMenu.css
+++ b/src/TicketManagement.ReactJS/ClientApp/src/views/NavMenu.css
@@ -16,3 +16,8 @@ html {
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+
+.inputFileStyle {
+  border: "1px dashed #adb5bd";
+  padding: "5px"
+}
