Fixes tests, MVC Identity pages, UserApi, several get function for ReactJS

--- a/src/TicketManagement.WebUI/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/src/TicketManagement.WebUI/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -4,6 +4,10 @@
 @model DeletePersonalDataModel
 @inject IViewLocalizer Localizer
 
+@{
+    Layout = "/Areas/Identity/Pages/Account/Manage/_Layout.cshtml";
+}
+
 <div class="alert alert-warning" role="alert">
     <p>
         <strong>@Localizer["Deleting this data will permanently remove your account, and this cannot be recovered."]</strong>
