--- a/src/TicketManagement.WebUI/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/src/TicketManagement.WebUI/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -5,6 +5,7 @@
 @inject IViewLocalizer Localizer
 
 @{
+    Layout = "/Areas/Identity/Pages/Account/Manage/_Layout.cshtml";
     ViewData["ActivePage"] = ManageNavPages.Email;
 }
 
