--- a/src/TicketManagement.WebUI/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/TicketManagement.WebUI/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,9 +5,12 @@
 @inject IViewLocalizer Localizer
 
 @{
+    Layout = "/Areas/Identity/Pages/Account/Manage/_Layout.cshtml";
+    ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
+<h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
