--- a/src/TicketManagement.WebUI/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/src/TicketManagement.WebUI/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -4,6 +4,7 @@
 @model ChangePasswordModel
 @inject IViewLocalizer Localizer
 @{
+    Layout = "/Areas/Identity/Pages/Account/Manage/_Layout.cshtml";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
