--- a/src/TicketManagement.WebUI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/src/TicketManagement.WebUI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,7 +9,7 @@
     }
     else
     {
-        Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+        Layout = "/Views/Shared/_Layout.cshtml";
     }
 }
 
